fix: navbar for dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -82,3 +82,19 @@
   -ms-border-radius: 6px;
   -o-border-radius: 6px;
 }
+
+.glassmorphism-navbar {
+  background: rgba(255, 255, 255, 0.37);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(15.9px);
+  -webkit-backdrop-filter: blur(15.9px);
+  border: 1px solid rgba(255, 255, 255, 0.33);
+}
+
+.glassmorphism-navbar-dark {
+  background: rgba(255, 255, 255, 0.37);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(3.9px);
+  -webkit-backdrop-filter: blur(3.9px);
+  border: 1px solid rgba(255, 255, 255, 0.33);
+}
